force-app/main/default/objects/Valuation__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Permanent Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>