force-app/main/default/objects/Valuation__c/fields/Address_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Address_Confirmation__c</fullName>
    <label>Address Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>