force-app/main/default/objects/Valuation__c/fields/Address_Found__c.field-meta.xml
<CustomField>
    <fullName>Address_Found__c</fullName>
    <label>Address Found</label>
    <length>255</length>
    <type>Text</type>
</CustomField>