force-app/main/default/objects/Valuation__c/fields/Any_Negative_to_the_Locality__c.field-meta.xml
<CustomField>
    <fullName>Any_Negative_to_the_Locality__c</fullName>
    <label>Any Negative to the Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>