force-app/main/default/objects/Valuation__c/fields/Any_Other_Negative_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Negative_Remarks__c</fullName>
    <label>Any Other Negative Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>