force-app/main/default/objects/Valuation__c/fields/Applicant_Designation__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Designation__c</fullName>
    <label>Applicant Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>