force-app/main/default/objects/Valuation__c/fields/Applicant_Met_Status__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Met_Status__c</fullName>
    <label>Applicant Met Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>