force-app/main/default/objects/Valuation__c/fields/Applicant_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Mobile_No__c</fullName>
    <label>Applicant Mobile No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>