force-app/main/default/objects/Valuation__c/fields/Applicant_URL__c.field-meta.xml
<CustomField>
    <fullName>Applicant_URL__c</fullName>
    <label>Applicant URL</label>
    <type>Url</type>
</CustomField>