force-app/main/default/objects/Valuation__c/fields/Application_No__c.field-meta.xml
<CustomField>
    <fullName>Application_No__c</fullName>
    <formula>Loan_Application__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application No.</label>
    <type>Text</type>
</CustomField>