force-app/main/default/objects/Valuation__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <formula>TEXT(Loan_Application__r.Loan_Application_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Status</label>
    <type>Text</type>
</CustomField>