force-app/main/default/objects/Valuation__c/fields/Approx_Income__c.field-meta.xml
<CustomField>
    <fullName>Approx_Income__c</fullName>
    <label>Approx Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>