force-app/main/default/objects/Valuation__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greater than 1000 sqft</fullName>
            </value>
            <value>
                <fullName>Lesser than 1000 sqft</fullName>
            </value>
            <value>
                <fullName>Lesser than 200 sqft</fullName>
            </value>
            <value>
                <fullName>Lesser than 500 sqft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>