force-app/main/default/objects/Valuation__c/fields/Area_Measured__c.field-meta.xml
<CustomField>
    <fullName>Area_Measured__c</fullName>
    <label>Area Measured</label>
    <length>255</length>
    <type>Text</type>
</CustomField>