force-app/main/default/objects/Valuation__c/fields/Area_sq_feet__c.field-meta.xml
<CustomField>
    <fullName>Area_sq_feet__c</fullName>
    <label>Area (sq. feet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>