force-app/main/default/objects/Valuation__c/fields/As_per_Document__c.field-meta.xml
<CustomField>
    <fullName>As_per_Document__c</fullName>
    <label>As per Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>