force-app/main/default/objects/Valuation__c/fields/As_Per_Site__c.field-meta.xml
<CustomField>
    <fullName>As_Per_Site__c</fullName>
    <label>As Per Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>