force-app/main/default/objects/Valuation__c/fields/BL_Vendor_Activity__c.field-meta.xml
<CustomField>
    <fullName>BL_Vendor_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Activity</label>
    <referenceTo>Valuation__c</referenceTo>
    <relationshipLabel>Activity</relationshipLabel>
    <relationshipName>Activity</relationshipName>
    <type>Lookup</type>
</CustomField>