force-app/main/default/objects/Valuation__c/fields/Boundaries_Matching__c.field-meta.xml
<CustomField>
    <fullName>Boundaries_Matching__c</fullName>
    <label>Boundaries Matching</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>