force-app/main/default/objects/Valuation__c/fields/Business_Vintage__c.field-meta.xml
<CustomField>
    <fullName>Business_Vintage__c</fullName>
    <label>Business Vintage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>