force-app/main/default/objects/Valuation__c/fields/BusinessEmployment_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>BusinessEmployment_Confirmed__c</fullName>
    <label>Business/Employment Confirmed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>