force-app/main/default/objects/Valuation__c/fields/Caution_Area__c.field-meta.xml
<CustomField>
    <fullName>Caution_Area__c</fullName>
    <label>Caution Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>