force-app/main/default/objects/Valuation__c/fields/Class_Of_Locality__c.field-meta.xml
<CustomField>
    <fullName>Class_Of_Locality__c</fullName>
    <label>Class Of Locality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Posh</fullName>
            </value>
            <value>
                <fullName>Middle Class</fullName>
            </value>
            <value>
                <fullName>Lower Middle Class</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>