force-app/main/default/objects/Valuation__c/fields/Co_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Name__c</fullName>
    <label>Co-Applicant Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>