force-app/main/default/objects/Valuation__c/fields/Co_Applicant_Names__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Names__c</fullName>
    <label>Co Applicant Names</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>