force-app/main/default/objects/Valuation__c/fields/Collateral__c.field-meta.xml
<CustomField>
    <fullName>Collateral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral</label>
    <referenceTo>Collateral__c</referenceTo>
    <relationshipName>Valuation</relationshipName>
    <type>Lookup</type>
</CustomField>