force-app/main/default/objects/Valuation__c/fields/Collateral_Description__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Description__c</fullName>
    <label>Collateral Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Occupied Residential</fullName>
            </value>
            <value>
                <fullName>Self-Occupied Commercial</fullName>
            </value>
            <value>
                <fullName>Mixed Usage Property (Self occupied)</fullName>
            </value>
            <value>
                <fullName>Mixed Usage Property (Partly self-occupied)</fullName>
            </value>
            <value>
                <fullName>Commercial Rented</fullName>
            </value>
            <value>
                <fullName>Residential Rented</fullName>
            </value>
            <value>
                <fullName>Under construction Residential</fullName>
            </value>
            <value>
                <fullName>Under construction Commercial</fullName>
            </value>
            <value>
                <fullName>Vacant Residential</fullName>
            </value>
            <value>
                <fullName>Vacant Commercial</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Self-occupied Industrial Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>