force-app/main/default/objects/Valuation__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Manager Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>