force-app/main/default/objects/Valuation__c/fields/Condition_of_House__c.field-meta.xml
<CustomField>
    <fullName>Condition_of_House__c</fullName>
    <label>Condition of House</label>
    <length>255</length>
    <type>Text</type>
</CustomField>