force-app/main/default/objects/Valuation__c/fields/Construction_Progress__c.field-meta.xml
<CustomField>
    <fullName>Construction_Progress__c</fullName>
    <label>Construction Progress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>