force-app/main/default/objects/Valuation__c/fields/Construction_Stage__c.field-meta.xml
<CustomField>
    <fullName>Construction_Stage__c</fullName>
    <label>Construction Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>