force-app/main/default/objects/Valuation__c/fields/Credit_facility_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_facility_Amount__c</fullName>
    <formula>Loan_Application__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit facility Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>