force-app/main/default/objects/Valuation__c/fields/Cross_Verification_Info__c.field-meta.xml
<CustomField>
    <fullName>Cross_Verification_Info__c</fullName>
    <label>Cross Verification Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>