force-app/main/default/objects/Valuation__c/fields/Current_Residence_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_Residence_Address__c</fullName>
    <label>Current Residence Address</label>
    <type>TextArea</type>
</CustomField>