force-app/main/default/objects/Valuation__c/fields/Date_of_Birth_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Incorporation__c</fullName>
    <formula>IF( ISBLANK(Loan_Applicant__r.Date_of_Birth__c),Loan_Applicant__r.Date_Of_Incorporation__c,Loan_Applicant__r.Date_of_Birth__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Birth/ Incorporation</label>
    <type>Date</type>
</CustomField>