force-app/main/default/objects/Valuation__c/fields/Department_Designation__c.field-meta.xml
<CustomField>
    <fullName>Department_Designation__c</fullName>
    <formula>Loan_Applicant__r.Designation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department/Designation</label>
    <type>Text</type>
</CustomField>