force-app/main/default/objects/Valuation__c/fields/Designation_of_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Designation_of_Borrower__c</fullName>
    <label>Designation of Borrower</label>
    <length>255</length>
    <type>Text</type>
</CustomField>