force-app/main/default/objects/Valuation__c/fields/Detail_of_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Detail_of_Vehicle__c</fullName>
    <label>Detail of Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>