force-app/main/default/objects/Valuation__c/fields/Distance_From_USFB_Sourcing_Branch__c.field-meta.xml
<CustomField>
    <fullName>Distance_From_USFB_Sourcing_Branch__c</fullName>
    <label>Distance From USFB Sourcing Branch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>