force-app/main/default/objects/Valuation__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipName>Valuation</relationshipName>
    <type>Lookup</type>
</CustomField>