force-app/main/default/objects/Valuation__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Title Deed</fullName>
            </value>
            <value>
                <fullName>Prior Title Deed</fullName>
            </value>
            <value>
                <fullName>Title Search Report/ No Encumbrance Certificate</fullName>
            </value>
            <value>
                <fullName>Draft Agreement Copy</fullName>
            </value>
            <value>
                <fullName>Revenue Records</fullName>
            </value>
            <value>
                <fullName>Permissions And Approvals</fullName>
            </value>
            <value>
                <fullName>Other Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>