force-app/main/default/objects/Valuation__c/fields/Documents_Req_For_Creation_Of_Security__c.field-meta.xml
<CustomField>
    <fullName>Documents_Req_For_Creation_Of_Security__c</fullName>
    <label>Documents Req. For Creation Of Security</label>
    <length>255</length>
    <type>Text</type>
</CustomField>