force-app/main/default/objects/Valuation__c/fields/Door_Photo_With_Name_Plate__c.field-meta.xml
<CustomField>
    <fullName>Door_Photo_With_Name_Plate__c</fullName>
    <label>Door Photo With Name Plate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>