force-app/main/default/objects/Valuation__c/fields/Duration_at_Current_Address__c.field-meta.xml
<CustomField>
    <fullName>Duration_at_Current_Address__c</fullName>
    <label>Duration at Current Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>