force-app/main/default/objects/Valuation__c/fields/Earning_Member_Details__c.field-meta.xml
<CustomField>
    <fullName>Earning_Member_Details__c</fullName>
    <label>Earning Member Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>