force-app/main/default/objects/Valuation__c/fields/Earning_Members_in_the_Family__c.field-meta.xml
<CustomField>
    <fullName>Earning_Members_in_the_Family__c</fullName>
    <label>Earning Members in the Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>