force-app/main/default/objects/Valuation__c/fields/Ease_of_Locating_the_Address__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_Locating_the_Address__c</fullName>
    <label>Ease of Locating the Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>