force-app/main/default/objects/Valuation__c/fields/Employee_ID_Card_Seen__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID_Card_Seen__c</fullName>
    <label>Employee ID Card Seen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>