force-app/main/default/objects/Valuation__c/fields/Employment_Confirmation_From_ColleagueHR__c.field-meta.xml
<CustomField>
    <fullName>Employment_Confirmation_From_ColleagueHR__c</fullName>
    <label>Employment Confirmation From Colleag/HR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>