force-app/main/default/objects/Valuation__c/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <formula>Loan_Applicant__r.Entity_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Name</label>
    <type>Text</type>
</CustomField>