force-app/main/default/objects/Valuation__c/fields/Exterior_Condition__c.field-meta.xml
<CustomField>
    <fullName>Exterior_Condition__c</fullName>
    <label>Exterior Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>