force-app/main/default/objects/Valuation__c/fields/Exteriors__c.field-meta.xml
<CustomField>
    <fullName>Exteriors__c</fullName>
    <label>Exteriors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>