force-app/main/default/objects/Valuation__c/fields/External_Vendor__c.field-meta.xml
<CustomField>
    <fullName>External_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Valuation</relationshipName>
    <type>Lookup</type>
</CustomField>