force-app/main/default/objects/Valuation__c/fields/Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Name__c</fullName>
    <formula>Loan_Applicant__r.Father_Spouse_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Father Name</label>
    <type>Text</type>
</CustomField>