force-app/main/default/objects/Valuation__c/fields/FI_Remark__c.field-meta.xml
<CustomField>
    <fullName>FI_Remark__c</fullName>
    <label>FI Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>