force-app/main/default/objects/Valuation__c/fields/FI_Result__c.field-meta.xml
<CustomField>
    <fullName>FI_Result__c</fullName>
    <label>FI Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>