force-app/main/default/objects/Valuation__c/fields/FI_Type__c.field-meta.xml
<CustomField>
    <fullName>FI_Type__c</fullName>
    <formula>IF( RecordType.Name = &apos;Residence FI&apos;,&apos;Residence&apos;, 
IF(RecordType.Name = &apos;Office FI&apos;,&apos;Business&apos;,
IF(RecordType.Name = &apos;Property Valuation&apos;,&apos;Property&apos;,&apos;&apos;)
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FI Type</label>
    <type>Text</type>
</CustomField>