force-app/main/default/objects/Valuation__c/fields/Field_Agent__c.field-meta.xml
<CustomField>
    <fullName>Field_Agent__c</fullName>
    <label>Field Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>