force-app/main/default/objects/Valuation__c/fields/Floor_No__c.field-meta.xml
<CustomField>
    <fullName>Floor_No__c</fullName>
    <label>Floor No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>