force-app/main/default/objects/Valuation__c/fields/Highlighted_Observations__c.field-meta.xml
<CustomField>
    <fullName>Highlighted_Observations__c</fullName>
    <label>Highlighted Observations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>