force-app/main/default/objects/Valuation__c/fields/ID_Proof_Check__c.field-meta.xml
<CustomField>
    <fullName>ID_Proof_Check__c</fullName>
    <label>ID Proof Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>