force-app/main/default/objects/Valuation__c/fields/Interior_Condition__c.field-meta.xml
<CustomField>
    <fullName>Interior_Condition__c</fullName>
    <label>Interior Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>