force-app/main/default/objects/Valuation__c/fields/Interiors__c.field-meta.xml
<CustomField>
    <fullName>Interiors__c</fullName>
    <label>Interiors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>