force-app/main/default/objects/Valuation__c/fields/Is_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Is_Read_Only__c</fullName>
    <formula>$User.Id != OwnerId &amp;&amp; $Profile.Name != &apos;System Administrator&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Read Only</label>
    <type>Checkbox</type>
</CustomField>