force-app/main/default/objects/Valuation__c/fields/Is_Report_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Report_Uploaded__c</fullName>
    <formula>IF( ISPICKVAL(Document__r.Status__c, &apos;Uploaded&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Report Uploaded?</label>
    <type>Checkbox</type>
</CustomField>