force-app/main/default/objects/Valuation__c/fields/Is_Revoked__c.field-meta.xml
<CustomField>
    <fullName>Is_Revoked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Revoked ?</label>
    <type>Checkbox</type>
</CustomField>