force-app/main/default/objects/Valuation__c/fields/IsBranchHasCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsBranchHasCurrentUser__c</fullName>
    <formula>CONTAINS($User.Branch_IDs__c, Loan_Application__r.Branch__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsBranchHasCurrentUser</label>
    <type>Checkbox</type>
</CustomField>