force-app/main/default/objects/Valuation__c/fields/Legal_Address__c.field-meta.xml
<CustomField>
    <fullName>Legal_Address__c</fullName>
    <label>Legal Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>