force-app/main/default/objects/Valuation__c/fields/Manager_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Manager_Mobile__c</fullName>
    <formula>RCU_Manager__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Mobile</label>
    <type>Text</type>
</CustomField>