force-app/main/default/objects/Valuation__c/fields/Manufacturer_Seller_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Seller_Dealer__c</fullName>
    <formula>Vehicle__r.Dealer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer/Seller/Dealer:</label>
    <type>Text</type>
</CustomField>