force-app/main/default/objects/Valuation__c/fields/Manufacturing_Year__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Year__c</fullName>
    <formula>Vehicle__r.Manufactured_Month_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturing Year</label>
    <type>Text</type>
</CustomField>