force-app/main/default/objects/Valuation__c/fields/Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No__c</fullName>
    <label>Mobile No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>