force-app/main/default/objects/Valuation__c/fields/Mobile_No_of_the_Person_met_at_Site__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No_of_the_Person_met_at_Site__c</fullName>
    <label>Mobile No. of the Person met at Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>