force-app/main/default/objects/Valuation__c/fields/Modified_Address__c.field-meta.xml
<CustomField>
    <fullName>Modified_Address__c</fullName>
    <label>Modified Address</label>
    <type>TextArea</type>
</CustomField>