force-app/main/default/objects/Valuation__c/fields/Name_Board_Seen__c.field-meta.xml
<CustomField>
    <fullName>Name_Board_Seen__c</fullName>
    <label>Name Board Seen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>