force-app/main/default/objects/Valuation__c/fields/Name_Mentioned_on_Signboard__c.field-meta.xml
<CustomField>
    <fullName>Name_Mentioned_on_Signboard__c</fullName>
    <label>Name Mentioned on Signboard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>