force-app/main/default/objects/Valuation__c/fields/Name_of_Person_Met_at_Site__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Person_Met_at_Site__c</fullName>
    <label>Name of Person Met at Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>