force-app/main/default/objects/Valuation__c/fields/Name_on_Door__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Door__c</fullName>
    <label>Name on Door</label>
    <length>255</length>
    <type>Text</type>
</CustomField>