force-app/main/default/objects/Valuation__c/fields/NameHouse_NoDetails_of_NeighbourTPC__c.field-meta.xml
<CustomField>
    <fullName>NameHouse_NoDetails_of_NeighbourTPC__c</fullName>
    <label>Name/House No./Details of Neighbour/TPC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>