force-app/main/default/objects/Valuation__c/fields/Near_by_location__c.field-meta.xml
<CustomField>
    <fullName>Near_by_location__c</fullName>
    <label>Near by location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>