force-app/main/default/objects/Valuation__c/fields/Nearest_Landmark__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Landmark__c</fullName>
    <label>Nearest Landmark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>