force-app/main/default/objects/Valuation__c/fields/Negative_Features_if_any__c.field-meta.xml
<CustomField>
    <fullName>Negative_Features_if_any__c</fullName>
    <label>Negative Features( if any)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>