force-app/main/default/objects/Valuation__c/fields/Neighbour_check_1__c.field-meta.xml
<CustomField>
    <fullName>Neighbour_check_1__c</fullName>
    <label>Neighbour check 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>