force-app/main/default/objects/Valuation__c/fields/Neighbour_check_2__c.field-meta.xml
<CustomField>
    <fullName>Neighbour_check_2__c</fullName>
    <label>Neighbour check 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>