force-app/main/default/objects/Valuation__c/fields/No_of_Car_Parkings__c.field-meta.xml
<CustomField>
    <fullName>No_of_Car_Parkings__c</fullName>
    <label>No. of Car Parkings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>